[package]
name = "bentobox"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
image = "0.25.8"
png = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
[target.'cfg( target_os = "linux" )'.dependencies]
tray-item = { version = "0.10.0", features = ["ksni"] }

[target.'cfg( target_os = "windows" )'.dependencies]
tray-item = { version = "0.10.0" }
